style: fix minor alignment issues

--- a/frontend/src/components/layout/Footer/Footer.module.css
+++ b/frontend/src/components/layout/Footer/Footer.module.css
@@ -1,9 +1,3 @@
-.footer_container {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-}
-
 footer {
   bottom: 0;
   background-color: #171717;
@@ -23,6 +17,12 @@ footer a {
 
 footer a:hover {
   color: #fff;
+}
+
+.footer_container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 
 .footer_section {
@@ -73,6 +73,10 @@ footer a:hover {
 
 .rights_container .rights {
   display: flex;
+}
+
+.rights_container .rights span {
+  margin-right: 5px;
 }
 
 .rights_container .terms {
